# patina-readiness-tool

./: .gitattributes  .markdownlint.yaml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  build_and_run_dxe_readiness_validation_tool.py  cspell.yml  deny.toml  owners.txt  rust-toolchain.toml  rustfmt.toml
.azurepipelines/: PrGate.yml
.azurepipelines/templates/: Build.yml
.cargo/: config.toml
.config/: tsaoptions.json
.github/workflows/: ci-workflow.yml  label-issues.yml  label-sync.yml  publish-binaries.yml  triage-issues.yml  update-release-draft.yml
common/: Cargo.toml
common/src/: lib.rs  serializable_fv.rs  serializable_hob.rs
docs/capture/: platform_onboarding_guide.md
docs/validator/: ci.md  validations.md
dxe_readiness_capture/: Cargo.toml
dxe_readiness_capture/src/: allocator.rs  bump_allocator.rs  capture.rs  capture_fv.rs  capture_hob.rs  hob_util.rs  hob_utils.rs  lib.rs  logger.rs  main.rs  utils.rs
dxe_readiness_capture/src/capture/: fv.rs  hob.rs
dxe_readiness_validater/: Cargo.toml
dxe_readiness_validator/: Cargo.toml
dxe_readiness_validator/src/: commandline.rs  errors.rs  logger.rs  main.rs  platform_error.rs  validate.rs  validate_fv.rs  validate_hob.rs  validation_kind.rs  validation_report.rs  validator.rs
dxe_readiness_validator/src/tests/data/: q35_capture.json
dxe_readiness_validator/src/validate/: fv.rs  hob.rs
