[workspace]
resolver = "2"

members = ["dxe_readiness_capture", "common", "dxe_readiness_validator"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"
rust-version = "1.85"
description = "Dxe Readiness Capture/Validation Tool"

[workspace.dependencies]
cfg-if = "1.0.0"
patina_sdk = { version = "3", registry = "patina-fw", features = [
  # Disable linker shenanigans used in patina_sdk for tests. The feature name
  # "off" is very confusing and should be renamed to "disable_patina_tests", or
  # better yet, the logic should be inverted and the feature renamed to
  # "enable_patina_tests" for clarity. Additionally, the feature should be
  # disabled by default and made opt-in, as it impacts all consumers of
  # patina_sdk.
  "off",
] }
patina_section_extractor = { version = "3", registry = "patina-fw" }
patina_stacktrace = { version = "3", registry = "patina-fw" }
log = { version = "^0.4", default-features = false, features = [
  "release_max_level_warn",
] }
spin = "^0.9"
mu_pi = { version = "5" }
serde = { version = "1", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
r-efi = { version = "5.0.0", default-features = false }
uuid = { version = "1.10.0", default-features = false }
clap = { version = "4", features = ["derive"] }

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
incremental = true
