[workspace]
resolver = "2"

members = ["dxe_readiness_capture", "dxe_readiness_validator"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
description = "Dxe Readiness Capture/Validation Tool"
repository = "https://github.com/OpenDevicePartnership/patina-readiness-tool"

[workspace.dependencies]

# Patina Dependencies
patina = { version = "22", features = ["serde"] }
patina_stacktrace = { version = "22" }

# Other Dependencies
cfg-if = "1.0.4"
clap = { version = "4", features = ["derive"] }
goblin = { version = "0.10.7", default-features = false }
log = { version = "^0.4", default-features = false, features = [
  "release_max_level_warn",
] }
r-efi = { version = "^6", default-features = false }
spin = "^0.12.0"
serde = { version = "1", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "1.23", default-features = false }
