[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = { workspace = true, features = ["pe32", "pe64", "te", "alloc"]}
mu_pi = { workspace = true }
r-efi = { workspace = true }
patina_section_extractor = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
x64 = []
aarch64 = []
