[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
goblin = { workspace = true, features = ["pe32", "pe64", "te", "alloc"]}
patina = { workspace = true, features = ["serde", "alloc"] }
r-efi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["std"]
std = ["patina/default", "serde/std", "serde_json/std"]
x64 = []
aarch64 = []
