[package]
name = "dxe_readiness_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = { workspace = true }
common = { path = "../common", default-features = false }
linked_list_allocator = "0.10.5"
log = { workspace = true }
patina = { workspace = true }
patina_stacktrace = { workspace = true }
r-efi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spin = { workspace = true }
uefi = { version = "0.36.0", features = ["alloc", "logger", "global_allocator"] }

[features]
default = []
x64 = []
aarch64 = []
uefishell = []