[package]
name = "dxe_readiness_capture"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfg-if = { workspace = true }
linked_list_allocator = "0.10.6"
log = { workspace = true }
patina = { workspace = true }
patina_stacktrace = { workspace = true }
r-efi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
spin = { workspace = true }
uefi = { version = "0.37.0", features = ["alloc", "logger", "global_allocator"] }

[features]
ci_features = []
default = []
x64 = []
aarch64 = []
# Targets the QEMU `-machine virt` aarch64 platform whose PL011 UART is mapped
# at 0x0900_0000 (per QemuArmVirtPkg). When disabled, the aarch64 build targets
# the SBSA reference platform whose PL011 UART is mapped at 0x6000_0000.
arm_virt = []
uefishell = []