[package]
name = "dxe_readiness_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
colored = "3.0.0"
comfy-table = "7.1.4"
common = { path = "../common" }
goblin = { workspace = true }
log = { workspace = true }
mu_pi = { workspace = true }
patina_sdk = { workspace = true }
r-efi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = []
x64 = []
aarch64 = []
