[package]
name = "dxe_readiness_validator"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
colored = "3.0.0"
comfy-table = "7.1.4"
common = { path = "../common" }
goblin = { workspace = true }
log = { workspace = true }
patina = { workspace = true }
r-efi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = []
x64 = []
aarch64 = []
