[package]
name = "dxe_readiness_validator"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
colored = "3.0.0"
comfy-table = "7.2.2"
dxe_readiness_capture = { path = "../dxe_readiness_capture" }
goblin = { workspace = true }
log = { workspace = true }
patina = { workspace = true }
r-efi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = []
x64 = []
aarch64 = []
